implement actual anime endpoint lmao
